add conf
